k8s/apps/harborsync/00-namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harborsync
